# fxfx

./: .gitignore  LICENSE  README.en.md  README.md  build_exe.py  build_jadx_addon.py  fxapk.spec  pyproject.toml  run_gui.pyw
.github/workflows/: ci.yml  release.yml
apkscan/: __init__.py  _pyi_console_entry.py  _pyi_entry.py  _pyi_gui_entry.py  cli.py
apkscan/analyzers/: _common.py  certificate.py  classify.py  components.py  config_keys.py  contacts.py  crypto_recipe.py  deeplink_surface.py  endpoints.py  favicon.py  firebase.py  ios_plist.py  jadx.py  js_bundle.py  manifest.py  packing.py  payment.py  permissions.py  sdk_fingerprint.py  sensitive_api.py
apkscan/core/: apk.py  appcrypto.py  chainaddr.py  context.py  device.py  infra.py  ipa.py  loader.py  logsetup.py  macho.py  models.py  pipeline.py  registry.py  report_naming.py  secrets.py  textutil.py  tools.py
apkscan/dynamic/: auto.py  batch.py  capture.py  correlate.py  cryptohook.py  doctor.py  fingerprint.py  merge.py  provision.py  unpack.py
apkscan/enrichers/: _ipinfo.py  asn.py  dns.py  icp.py  rdap.py  whois.py
apkscan/gui/: __init__.py  controller.py  view.py
apkscan/report/: html.py  ioc.py  json.py  letters.py
apkscan/report/templates/: report.html.j2
apkscan/rules/: app_types.yaml  capture_noise.yaml  contacts.yaml  crypto_recipe.yaml  db_carve.yaml  deeplink_surface.yaml  domain_tiers.yaml  endpoints.yaml  firebase.yaml  letter_templates.yaml  packers.yaml  payment.yaml  secrets.yaml
docs/: build-exe.md  dynamic-setup.md
tests/: conftest.py  test_appcrypto.py  test_auto.py  test_batch.py  test_build_exe_frida.py  test_capture.py  test_certificate.py  test_chainaddr.py  test_classify.py  test_cli_dynamic.py  test_clipboard.py  test_config_keys.py  test_contacts.py  test_correlate.py  test_credential.py  test_crypto_recipe.py  test_cryptohook.py  test_deeplink_surface.py  test_device.py  test_doctor.py  test_endpoints.py  test_enrich_concurrency.py  test_enricher_dns.py  test_enricher_icp.py  test_enricher_ipinfo.py  test_enricher_rdap.py  test_enricher_whois.py  test_favicon.py  test_fingerprint.py  test_firebase.py  test_gui_cli.py  test_gui_controller.py  test_gui_view.py  test_infra.py  test_ioc.py  test_ios_plist.py  test_ipa_context.py  test_ipa_pipeline.py  test_jadx.py  test_js_bundle.py  (+20 more)
